--- a/package.json
+++ b/package.json
@@ -2,25 +2,57 @@
   "name": "collections-app-ts",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "server:dev": "node server/index.js",
+    "server:prod": "NODE_ENV=production pm2 start server/index.js",
+    "server:restart": "pm2 restart index",
+    "server:delete": "pm2 delete index",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.11",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
+    "express": "^4.18.2",
+    "express-http-proxy": "^1.6.3",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.1.0",
+    "node-fetch": "^3.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.5",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "react-uploader": "^3.7.1",
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.6.0",
+    "shortid": "^2.2.16",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "typescript": "^4.9.5",
+    "upload-js-full": "^1.23.0",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0"
   },
   "eslintConfig": {
     "extends": [
