--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server:dev": "node server/index.js",
+    "server:dev": "node --watch server/index.js",
     "server:prod": "NODE_ENV=production pm2 start server/index.js",
     "server:restart": "pm2 restart index",
     "server:delete": "pm2 delete index",
