--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.2.10",
     "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.6.2",
